--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -3,7 +3,6 @@
  .header {
    background: black;
    font-size: 14px;
-   /*color: #999;*/
    font-size: 14px;
  }
 
@@ -15,15 +14,19 @@
    color: white;
  }
 
- .header-nav {
-   margin: auto;
-   width: 80%;
+ @media (min-width: 400px) {
+   .header-nav {
+     margin: 0;
+   }
+
+   .header-begin {
+     right: 20%;
+   }
  }
 
  .header-logo {
    float: left;
    display: block;
-   /*width: 155px;*/
    padding: 19px 20px;
    width: 60px;
  }
@@ -59,9 +62,9 @@
 }
 
 .header-begin {
-  float: left;
+  float: right;
   margin-top: 30px;
-  margin-left: 20px;
+  margin-right: 20px;
   display: block;
 }
 
