--- a/app/assets/stylesheets/subject_detail.css
+++ b/app/assets/stylesheets/subject_detail.css
@@ -40,6 +40,10 @@
   margin-top: 20px;
 }
 
+.deck a:hover {
+  color: 'green';
+}
+
 
 .subject-detail-background ul {
 
@@ -62,6 +66,7 @@
   padding: 5px 8px;
   background: #34495e;
   border-radius: 5px;
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.25);
 }
 
 .deck-form {
@@ -72,6 +77,7 @@
   width: 200px;
   font-size: 12px;
   float: left;
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.25);
 }
 
 .deck-form > h1 {
@@ -88,6 +94,7 @@
   background: #2980b9;
   border-radius: 5px;
   color: white;
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.25);
 }
 
 .deck-form input {
