--- a/app/assets/stylesheets/subject_nav.css
+++ b/app/assets/stylesheets/subject_nav.css
@@ -68,7 +68,7 @@
   font-size: 12px;
   margin: auto;
   margin-top: 20px;
-  /*color: white;*/
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.25);
 }
 
 .subject-nav-form > h1 {
